# Task_to_work

./: README.md
cpp/: CMakeLists.txt  colors.txt
cpp/include/: colors.hpp
cpp/src/: main.cpp
python/: colors.txt  main.py
